Fix EXIF popover z-index

--- a/content/assets/main.css
+++ b/content/assets/main.css
@@ -348,6 +348,7 @@ p.img img {
     font-size: 0.8em;
     border-radius: 0.5em;
     text-shadow: 0 1px 0 #000;
+    z-index: 2;
 }
 
 #exif-popover.active {
